Fix layer combobox cutoffs

--- a/viewport.css
+++ b/viewport.css
@@ -12,8 +12,8 @@ body {
 }
 
 .hori-margin {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .vert-margin {
@@ -133,7 +133,7 @@ body {
 .custom-combobox-input {
   position: relative;
   margin: 0;
-  width: 18ch;
+  width: 16ch;
   padding: 5px 10px;
   background: none;
 }
